# horizon

./: README.md  pyproject.toml  report.md  todo.md
db/: chroma.sqlite3
outputs/: discovered_startups.json  funding_analysis.json  leadership_profiles.json  market_analysis.json  nvidia_inception_argentina_20250916_134604.json  nvidia_inception_argentina_20250916_134604_summary.md  nvidia_inception_brazil_20250918_230233.json  nvidia_inception_brazil_20250918_230233_summary.md  nvidia_inception_consolidated_20250916_134634.json  nvidia_inception_consolidated_20250916_134634_consolidated.md  nvidia_inception_mexico_20250916_133804.json  nvidia_inception_mexico_20250916_133804_summary.md  startup_database.json  startup_qualifications.json  validated_startup_database.json
src/horizon/: app.py  crew.py  main.py  resend_client.py
src/horizon/config/: __init__.py  agents.yaml  tasks.yaml
src/horizon/tools/: __init__.py  startup_discovery_tools.py
src/horizon/utils/: database.py  email_tester.py
