[project]
name = "horizon"
version = "0.1.0"
description = "horizon using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.186.1,<1.0.0"
]

[project.scripts]
horizon = "horizon.main:run"
run_crew = "horizon.main:run"
train = "horizon.main:train"
replay = "horizon.main:replay"
test = "horizon.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
